# anisoEngine2

./: .gitignore  CMakeLists.txt  COMMIT_MSG.txt  LICENSE  STATUS.html  imgui.ini  push.bat  wizardly-ardinghelli-2f45e3.rar
docs/: mechanics_status.html  technique_guide.html  technique_guide.md
shaders/common/: constants.glsl  hash.glsl  mpm_utils.glsl  sdf_ops.glsl  sph_kernels.glsl
shaders/physics/: charge_compose.comp  charge_rasterize.comp  electrostatic_force.comp  euler_advect.comp  euler_airtight_propagate.comp  euler_airtight_rasterize.comp  euler_airtight_seed.comp  euler_airtight_smooth.comp  euler_airtight_update.comp  euler_bio_source.comp  euler_bio_support.comp  euler_blast.comp  euler_blow.comp  euler_diffuse_temp.comp  euler_divergence.comp  euler_drag.comp  euler_enforce_bc.comp  euler_forces.comp  euler_heat_gun.comp  euler_inject.comp  euler_pressure.comp  euler_project.comp  euler_reaction_diffuse.comp  euler_smoothlife.comp  ferro_chain_force.comp  magnetic_compose.comp  magnetic_field.comp  magnetic_jacobi.comp  magnetic_particles.comp  magnetic_rasterize.comp  magnetic_source.comp  mpm_clear.comp  mpm_g2p.comp  mpm_grid_op.comp  mpm_impact_contact.comp  mpm_p2g.comp  mpm_thermal.comp  prefix_sum.comp  sdf_rebuild.comp  sdf_stamp.comp  (+9 more)
shaders/render/: bloom_splat.frag  blur.frag  fullscreen.vert  heat_glow.frag  magnetic_field_vis.frag  metaball_splat.frag  metaball_splat.vert  metaball_surface.frag  particle_draw.frag  particle_draw.vert  preview.frag  preview.vert  sdf_draw.frag  sdf_draw.vert
shaders/test/: test_increment.comp
src/: main.cpp
src/core/: creation_menu.cpp  creation_menu.h  engine.cpp  engine.h  foot_demo.cpp  foot_demo.h  input.cpp  input.h  log.h  scenes.cpp  scenes.h  time_step.h  types.h  window.cpp  window.h
src/gpu/: buffer.cpp  buffer.h  compute_shader.cpp  compute_shader.h  shader.cpp  shader.h
src/physics/common/: grid.cpp  grid.h  particle_buffer.cpp  particle_buffer.h  spatial_hash.cpp  spatial_hash.h
src/physics/electrostatic/: electrostatic_field.cpp  electrostatic_field.h
src/physics/eulerian/: euler_fluid.cpp  euler_fluid.h
src/physics/magnetic/: magnetic_field.cpp  magnetic_field.h
src/physics/mpm/: mpm_solver.cpp  mpm_solver.h
src/physics/sdf/: sdf_field.cpp  sdf_field.h
src/physics/sph/: sph_solver.cpp  sph_solver.h
src/physics/xpbd/: xpbd_field.cpp  xpbd_field.h
src/render/: bloom.cpp  bloom.h  camera.cpp  camera.h  metaball_renderer.cpp  metaball_renderer.h  particle_renderer.cpp  particle_renderer.h  pipeline_viewer.cpp  pipeline_viewer.h  sdf_renderer.cpp  sdf_renderer.h
